<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">shopmylifi</string>
    <string name="hello_world">Laura is a bitch !</string>
    <string name="action_settings">Settings</string>
    <string name="title_display_liste_course">Affichage Liste de Courses</string>
    <string name="title_display_liste_produits1">Affichage Liste des Produits du Magasin</string>
    <string name="title_display_category">Affichage Liste des Catégories</string>
    <string name="title_display_reglages">Affichage Réglages</string>
    <string name="title_display_matrice">Calcul itinéraire </string>
    <string name="title_itineraire">Calcul itinéraire </string>
    <string name="desc_button_liste">Liste</string>
    <string name="desc_button_map">Carte</string>
    <string name="desc_button_itineraire">Itinéraire</string>
    <string name="desc_button_menu">Menu</string>
    <string name="desc_button_settings">Réglages</string>
    <string name="desc_bandeau_liste_course">Votre liste</string>
    <string name="desc_button_home">Home</string>
    <string name="desc_bandeau_pub">Publicité</string>
    <string name="desc_button_ad_article">Ajouter un article</string>
    <string name="desc_bandeau_reglages">Réglages</string>
    <string name="desc_button_quit">Quitter ShopMyLiFi</string>
    <string name="supprimer_article">Supprimer l\'article</string>
    <string name="supprimer_liste">Supprimer la liste</string>
</resources>