<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shopmylifi.MainActivity"
    tools:ignore="MergeRootFrame" >

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/jaune_vert_gradient" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageButton
            android:id="@+id/main_button_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_button_itineraire"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="102dp"
            android:background="@null"
            android:contentDescription="@string/desc_button_map"
            android:src="@drawable/carte" />

        <ImageButton
            android:id="@+id/main_button_liste_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="114dp"
            android:layout_toLeftOf="@+id/main_button_map"
            android:background="@null"
            android:contentDescription="@string/desc_button_liste"
            android:src="@drawable/liste" />

        <ImageButton
            android:id="@+id/main_button_itineraire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/main_button_liste_course"
            android:layout_alignParentRight="true"
            android:layout_marginRight="39dp"
            android:background="@null"
            android:contentDescription="@string/desc_button_itineraire"
            android:src="@drawable/itineraire" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fond_menu" >

        <ImageButton
            android:id="@+id/main_button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/desc_button_menu"
            android:src="@drawable/bandeau_haut"
            android:layout_weight="5" />
        	

        <ImageButton
            android:id="@+id/main_button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/desc_button_settings"
            android:src="@drawable/reglage"
            android:layout_weight="1" />
    </LinearLayout>

</FrameLayout>