<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.example.shopmylifi.DisplayListeCourse"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fond_menu"
        android:gravity="top" >

        <ImageButton
            android:id="@+id/liste_course_button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/desc_button_home"
            android:src="@drawable/home" />

        <ImageView
            android:id="@+id/liste_course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:contentDescription="@string/desc_bandeau_liste_course"
            android:src="@drawable/bandeau_liste_course" />

        <ImageButton
            android:id="@+id/liste_course_button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/desc_button_settings"
            android:src="@drawable/reglage" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/liste_course_button_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/desc_button_ad_article"
        android:src="@drawable/add_article" />

    <ListView
        android:id="@+id/id_display_liste_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>