<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_liste_articles11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.example.shopmylifi.ListeProduits1Activity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:id="@+id/container_liste_articles12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/fond_menu" >

        <ImageButton
            android:id="@+id/liste_articles1_button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:contentDescription="@string/desc_button_home"
            android:src="@drawable/home" />

        <ImageView
            android:id="@+id/liste_articles1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/desc_bandeau_liste_course"
            android:src="@drawable/bandeau_liste_articles1" />

        <ImageButton
            android:id="@+id/liste_articles1_button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:contentDescription="@string/desc_button_settings"
            android:src="@drawable/reglage" />
    </RelativeLayout>

    <ListView
        android:id="@+id/id_display_liste_articles1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/liste_articles1_pub"
        android:layout_below="@id/container_liste_articles12" >
    </ListView>

    <ImageView
        android:id="@id/liste_articles1_pub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:background="#ffffff"
        android:contentDescription="@string/desc_bandeau_pub"
        android:padding="4dp"
        android:src="@drawable/bandeau_pub3" />

</RelativeLayout>